# lang

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/integration/: booleans.rs  build.rs  errors.rs  mod.rs  numbers.rs  strings.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/codegen/: cranelift.rs  mod.rs
crates/core/src/data/: types.rs  value.rs
crates/core/src/diagnostics/: mod.rs
crates/core/src/hir/: interpreter.rs
crates/core/src/mir/: mod.rs
crates/core/src/resolve/: mod.rs  scope.rs
crates/core/src/task/: mod.rs
crates/core/src/types/: mod.rs  registry.rs  value.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: executor.rs  interpreter.rs  lib.rs  state.rs
crates/runtime/src/ffi/: mod.rs
crates/runtime/src/io/: mod.rs
crates/runtime/src/mem/: mod.rs
crates/runtime/src/net/: mod.rs
crates/runtime/src/task/: executor.rs  mod.rs
crates/runtime/src/time/: mod.rs
crates/std/: Cargo.toml
crates/std/src/: io.rs  lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  pretty.rs  token.rs
