[package]
name = "lang-cli"
version = "0.1.0"
edition = "2021"
authors = ["Language Dev Team <dev@example.com>"]
description = "CLI entry point for the async parallel language"
license = "MIT OR Apache-2.0"

[dependencies]
lang-core = { path = "../core" }
lang-runtime = { path = "../runtime" }
lang-syntax = { path = "../syntax" }
async-trait = { workspace = true }
futures = { workspace = true }
