[package]
name = "lang-core"
version = "0.1.0"
edition = "2021"
authors = ["Language Dev Team <dev@example.com>"]
description = "Core definitions for the async parallel language"
license = "MIT OR Apache-2.0"

[dependencies]
lang-syntax = { path = "../syntax" }
thiserror = { workspace = true }
tempfile = "3"
