[package]
name = "lang-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Language Dev Team <dev@example.com>"]
description = "Runtime for executing the async parallel language"
license = "MIT OR Apache-2.0"

[dependencies]
lang-core = { path = "../core" }
lang-syntax = { path = "../syntax" }
futures = { workspace = true }
async-trait = { workspace = true }
